# ArkheKernel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
arkhe-kernel/: Cargo.toml  README.md
arkhe-kernel/benches/: chain_hash.rs  codec.rs  dispatch.rs  signing.rs
arkhe-kernel/src/: lib.rs
arkhe-kernel/src/abi/: caps.rs  error.rs  ids.rs  mod.rs  principal.rs
arkhe-kernel/src/persist/: mod.rs  replay.rs  signature.rs  snapshot.rs  wal.rs
arkhe-kernel/src/runtime/: apply.rs  dispatch.rs  event.rs  kernel.rs  mod.rs  observer.rs  registry.rs  stage.rs  view.rs
arkhe-kernel/src/state/: authz.rs  config.rs  context.rs  instance.rs  ledger.rs  mod.rs  op.rs  quota.rs  scheduler.rs  scope.rs  traits.rs
arkhe-kernel/tests/: derive_macros.rs
arkhe-macros/: Cargo.toml  README.md
arkhe-macros/src/: lib.rs
book/: book.toml
book/src/en/: SUMMARY.md  getting-started.md  introduction.md  roadmap.md
book/src/en/appendix/: decisions.md
book/src/en/architecture/: domain-spec.md  invariants.md  overview.md  threat-model.md
ci/: l0-baseline-hashes.txt  scripts-baseline-hashes.txt  test-baselines.txt
docs/: ABI-versioning.md  README.md  alpha-release-schedule.md  axiom-test-cite-guide.md  build-reproducibility.md  implementation-plan.md  msrv-policy.md  pqc-software-only.md  release-keys.md  sealing-pattern-lineage.md  spec-drift-candidates.md
docs/runbook/: l2-single-active-operations.md  tier-0-limitations.md
examples/dice/: Cargo.toml  README.md
examples/dice/src/: main.rs
formal/: axiom-test-cite.toml
formal/tla-plus/: README.md  cr1_chain_hash_invariant.tla  cr2_state_machine_refinement.tla  cr3_replay_determinism.tla  cr4_observer_capability_confinement.tla  r4_implementation_refinement.tla  runtime_core.tla
scripts/: generate-release-key.sh  pre-publish-verify.sh  reproduce-build.sh  verify-axiom-cite.sh  verify-l0-baseline.sh
supply-chain/: audits.toml  config.toml
